# CNN-Accelerator-Simulator

./: .gitignore  CMakeLists.txt  README  experiment_report.txt  sim_out.txt  sim_out_phase_grouped.txt  zero_skip_benchmark_report.md
build-bench/: CMakeCache.txt  CTestTestfile.cmake  Makefile  benchmark_helper_tests  benchmark_realworld_tests  benchmark_regression_tests  bitserial_bench  bitserial_sim  cmake_install.cmake  full_benchmark_compare.csv  full_benchmark_compare.txt  sample0_compare.csv  sample0_compare.txt
build-bench/Testing/Temporary/: CTestCostData.txt
include/: Accelerator.h  BenchmarkSuite.h  ConvLayer.h  ExecutionMode.h  Lane.h  MNISTReader.h  Memory.h  PEGroup.h  ReferenceConv.h  Scheduler.h  Task.h  Tensor.h  WeightBroadcaster.h  WorkQueue.h
src/: Accelerator.cpp  BenchmarkSuite.cpp  ConvLayer.cpp  Lane.cpp  MNISTReader.cpp  Memory.cpp  PEGroup.cpp  ReferenceConv.cpp  Scheduler.cpp  Task.cpp  WeightBroadcaster.cpp  WorkQueue.cpp  benchmark_main.cpp  main.cpp
tests/: benchmark_helper_tests.cpp  benchmark_realworld_tests.cpp  benchmark_regression_tests.cpp  zero_skip_tests.cpp
training/: conv1_bias.txt  conv1_weight.txt  mnist_cnn_checkpoint.pt  train_mnist_cnn.py
